--- a/server/views/login.ejs
+++ b/server/views/login.ejs
@@ -5,7 +5,7 @@
   <body>
 
     <h2>Login</h2>
-    <form action='/login' method='POST'>
+    <form method='POST'>
       <div class="form-group">
         <label for="name">Username</label>
         <input type="text" class="form-control" id="name" name="username" value="swati" placeholder="Enter username">
@@ -28,7 +28,7 @@
     <br>
 
 
-    <% include ./partials/footer %>
+
   </body>
 
 </html>
