--- a/server/views/register.ejs
+++ b/server/views/register.ejs
@@ -4,7 +4,7 @@
 
 <body>
 <h2>Sign up </h2>
-<form action ="/authentication/register" method="POST">
+<form action ="/auth/register" method="POST">
   <div class="form-group">
     <label for="name">Username</label>
     <input type="text" class="form-control" id="name" name="username" placeholder="Enter username">
