--- a/frontend/envirevent/src/app/donator-donate/donator-donate.component.html
+++ b/frontend/envirevent/src/app/donator-donate/donator-donate.component.html
@@ -1,13 +1,31 @@
-<form>
-  <span>
-    Select Choice
-  </span>
-  
-  <span>
-    <select *ngFor="let val of Choice; let i = index">
-      <option value={{i}}>{{val.name}}</option>
-    </select>
-  </span>
-  
-  
-</form>
+<div class="container">
+    <form >
+      <div class="form-row">
+      <div class="form-group col-2">
+         <h3>Tetra Pack</h3>
+        </div>
+      <div class="form-group col-10">
+          <input [(ngModel)]="tetraPack" type="number" class="form-control" id="tetraPack" name="tetraPack" placeholder="Tetra Pack">
+        </div>
+        <div class="form-group col-2">
+            <h3>CardBoard</h3>
+           </div>
+         <div class="form-group col-10">
+             <input [(ngModel)]="cardboard" type="number" class="form-control" id="cardboard" name="cardboard" placeholder="Card Board">
+           </div>
+           <div class="form-group col-2">
+              <h3>Glass Bottle </h3>
+             </div>
+           <div class="form-group col-10">
+               <input [(ngModel)]="glassBottle" type="number" class="form-control" id="glassBottle" name="glassBottle" placeholder="Glass Bottle">
+             </div>
+             <div class="form-group col-2">
+                <h3>Plastic Bottle</h3>
+               </div>
+             <div class="form-group col-10">
+                 <input [(ngModel)]="plasticBottle" type="number" class="form-control" id="plasticBottle" name="plasticBottle" placeholder="Platic Bottle">
+               </div>
+      </div>
+      <button type="submit" class="btn btn-default" (click)="onSubmission();">Submit</button>
+    </form>
+  </div>
