--- a/frontend/envirevent/src/app/donator-wallet/donator-wallet.component.html
+++ b/frontend/envirevent/src/app/donator-wallet/donator-wallet.component.html
@@ -1,3 +1,5 @@
-<p>
-  donator-wallet works!
-</p>
+<div>Eco Wallet</div>
+
+<div class="card bg-light text-dark">
+  <div class="card-body">Light card</div>
+</div>
