qr not tested but initialized....

--- a/frontend/envirevent/src/app/collector-verify/collector-verify.component.html
+++ b/frontend/envirevent/src/app/collector-verify/collector-verify.component.html
@@ -1,3 +1,11 @@
 <p>
   collector-verify works!
 </p>
+
+<qr-scanner
+        [debug]="false"
+        [canvasWidth]="1080" 
+        [canvasHeight]="720" 
+        [stopAfterScan]="true" 
+        [updateTime]="500" > 
+</qr-scanner>
