--- a/frontend/envirevent/src/app/collector-request/collector-request.component.html
+++ b/frontend/envirevent/src/app/collector-request/collector-request.component.html
@@ -1,3 +1,43 @@
-<p>
-  collector-request works!
-</p>
+<div class="container">
+    <form >
+      <div class="form-row">
+      <div class="form-group col-2">
+         <h3>Tetra Pack</h3>
+        </div>
+      <div class="form-group col-10">
+        <span><input [(ngModel)]="tetraPack" type="number" class="form-control" id="tetraPack" name="tetraPack" placeholder="Tetra Pack">
+          <input type="checkbox" name="" value=""> <br>
+         </span>  
+        </div>
+        <div class="form-group col-2">
+            <h3>CardBoard</h3>
+           </div>
+         <div class="form-group col-10">
+         <span> <input [(ngModel)]="cardboard" type="number" class="form-control" id="cardboard" name="cardboard" placeholder="Card Board">
+          <input type="checkbox" name="" value=""> <br>
+        </span>
+           </div>
+           <div class="form-group col-2">
+              <h3>Glass Bottle </h3>
+             </div>
+           <div class="form-group col-10">
+            <span> <input [(ngModel)]="glassBottle" type="number" class="form-control" id="glassBottle" name="glassBottle" placeholder="Glass Bottle">
+              <input type="checkbox" name="" value=""> <br>
+            </span>
+             </div>
+             <div class="form-group col-2">
+                <h3>Plastic Bottle</h3>
+               </div>
+             <div class="form-group col-10">
+                <span><input [(ngModel)]="plasticBottle" type="number" class="form-control" id="plasticBottle" name="plasticBottle" placeholder="Platic Bottle">
+                  <input type="checkbox" name="" value=""> <br>
+                </span>
+
+               </div>
+
+              
+               
+      </div>
+      <button type="submit" class="btn btn-default" (click)="onSubmission();">Submit</button>
+    </form>
+  </div>
