--- a/frontend/envirevent/src/app/login/login.component.html
+++ b/frontend/envirevent/src/app/login/login.component.html
@@ -88,6 +88,18 @@ e.preventDefault();
 									<div class="form-group">
 										<input type="password" name="confirm-password" id="confirm-password" tabindex="2" class="form-control" placeholder="Confirm Password">
 									</div>
+									<div class=" form-group">
+											<input class="form-check-input" type="radio" name="exampleRadios" id="exampleRadios1" value="option1" checked>
+											<label class="form-check-label" for="exampleRadios1">
+													Register as User
+											</label>
+										  </div>
+										  <div class=" form-group">
+											<input class="form-check-input" type="radio" name="exampleRadios" id="exampleRadios2" value="option2">
+											<label class="form-check-label" for="exampleRadios2">
+											  Register as Collection Point
+											</label>
+										  </div>
 									<div class="form-group">
 										<div class="row">
 											<div class="col-sm-6 col-sm-offset-3">
