--- a/frontend/envirevent/src/app/login/login.component.html
+++ b/frontend/envirevent/src/app/login/login.component.html
@@ -39,7 +39,7 @@ e.preventDefault();
 								<a  [ngClass]="{'active': id === 1 } " id="login-form-link" (click)="logSwap();addClass(1)" style="cursor:default;">Login</a>
 							</div>
 							<div class="col-xs-6">
-								<a [ngClass]="{'active': id === 2 }"  id="register-form-link" (click)="regSwap();addClass(2)">SignUp</a>
+								<a [ngClass]="{'active': id === 2 }"  id="register-form-link" (click)="regSwap();addClass(2)" style="cursor:default;">SignUp</a>
 							</div>
 						</div>
 						<hr>
