--- a/frontend/envirevent/src/app/donator-donate/donator-donate.component.html
+++ b/frontend/envirevent/src/app/donator-donate/donator-donate.component.html
@@ -26,6 +26,7 @@
                  <input [(ngModel)]="plasticBottle" type="number" class="form-control" id="plasticBottle" name="plasticBottle" placeholder="Platic Bottle">
                </div>
       </div>
-      <button type="submit" class="btn btn-default" (click)="onSubmission();">Submit</button>
+      <button type="submit" class="btn btn-default" (click)="onSubmission();toggle();">Submit</button>
     </form>
+
   </div>
