--- a/frontend/envirevent/src/app/donator-donate/donator-donate.component.html
+++ b/frontend/envirevent/src/app/donator-donate/donator-donate.component.html
@@ -1,28 +1,28 @@
 <div class="container">
     <form >
       <div class="form-row">
-      <div class="form-group col-2">
-         <h3>Tetra Pack</h3>
+      <div class="form-group col-12 col-md-2">
+         <h5>Tetra Pack</h5>
         </div>
-      <div class="form-group col-10">
+      <div class="form-group col-12 col-md-10">
           <input [(ngModel)]="tetraPack" type="number" class="form-control" id="tetraPack" name="tetraPack" placeholder="Tetra Pack">
         </div>
-        <div class="form-group col-2">
-            <h3>CardBoard</h3>
+        <div class="form-group col-12 col-md-2">
+            <h5>CardBoard</h5>
            </div>
-         <div class="form-group col-10">
+         <div class="form-group col-md-10 col-12">
              <input [(ngModel)]="cardboard" type="number" class="form-control" id="cardboard" name="cardboard" placeholder="Card Board">
            </div>
-           <div class="form-group col-2">
-              <h3>Glass Bottle </h3>
+           <div class="form-group col-12 col-md-2 ">
+              <h5>Glass Bottle </h5>
              </div>
-           <div class="form-group col-10">
+           <div class="form-group col-md-10 col-12">
                <input [(ngModel)]="glassBottle" type="number" class="form-control" id="glassBottle" name="glassBottle" placeholder="Glass Bottle">
              </div>
-             <div class="form-group col-2">
-                <h3>Plastic Bottle</h3>
+             <div class="form-group col-md-2 col-12">
+                <h5>Plastic Bottle</h5>
                </div>
-             <div class="form-group col-10">
+             <div class="form-group col-md-10 col-12 ">
                  <input [(ngModel)]="plasticBottle" type="number" class="form-control" id="plasticBottle" name="plasticBottle" placeholder="Platic Bottle">
                </div>
       </div>
