--- a/frontend/envirevent/src/app/donator/donator.component.html
+++ b/frontend/envirevent/src/app/donator/donator.component.html
@@ -33,7 +33,15 @@
             <ng-sidebar  [(opened)]="_opened" [(mode)]="slide"  style="background-color:aliceblue;">
 
               <div class="box sidebar">
-                <p>LOLOLOLOLLOL</p>
+                  <button type="button" class="btn btn-secondary btn-lg btn-block"><p><i class="fa fa-recycle"></i> Recycle</p></button>
+                  <button type="button" class="btn btn-secondary btn-lg btn-block"><p> <i class="fa fa-list-alt"></i>Transaction</p></button>
+                  <button type="button" class="btn btn-secondary btn-lg btn-block"><p><i class="fas fa-trophy"></i>Quest</p></button>
+                  <button type="button" class="btn btn-secondary btn-lg btn-block"><p> <i class="fas fa-shopping-cart"></i>Shops Around You</p></button>
+                  <button type="button" class="btn btn-secondary btn-lg btn-block"><p><i class="fas fa-wallet"></i> Wallet</p></button>
+                
+                
+                
+                                
               </div>
 
             </ng-sidebar>
