--- a/frontend/envirevent/src/app/donator-wallet/donator-wallet.component.html
+++ b/frontend/envirevent/src/app/donator-wallet/donator-wallet.component.html
@@ -21,14 +21,18 @@
 </div>
 
 <div class="card bg-light text-dark card-body">
-    <p>
-      60points was removed at store abc
-    </p>
+    <div class="row">
+      <div class="col-2 col-md-3"><span>+60</span></div>
+      <div class="col-3 col-md-6"></div>
+      <div class="col-7 col-md-3">Spent at Store ABC</div>
+    </div>
 </div>
 
 <div class="card bg-light text-dark card-body">
-  <p>
-    60points is added to your account
-  </p>
+    <div class="row">
+        <div class="col-2 col-md-3"> <span>-60</span> </div>
+        <div class="col-3 col-md-6"></div>
+        <div class="col-7 col-md-3">Added at Store ABC</div>
+      </div>
 </div>
 <br>
