--- a/frontend/envirevent/src/app/donator-leaderboard/donator-leaderboard.component.html
+++ b/frontend/envirevent/src/app/donator-leaderboard/donator-leaderboard.component.html
@@ -1,3 +1,10 @@
 <p>
   donator-leaderboard works!
 </p>
+
+<div class="list-group">
+  <a  class="list-group-item">First name</a>
+  <a  class="list-group-item">Second name</a>
+  <a  class="list-group-item">Third name</a>
+</div> 
+
