--- a/frontend/envirevent/src/app/donator-leaderboard/donator-leaderboard.component.html
+++ b/frontend/envirevent/src/app/donator-leaderboard/donator-leaderboard.component.html
@@ -1,10 +1,16 @@
-<p>
-  donator-leaderboard works!
-</p>
 
-<div class="list-group">
-  <a  class="list-group-item">First name</a>
-  <a  class="list-group-item">Second name</a>
-  <a  class="list-group-item">Third name</a>
-</div> 
+  <div class="card  text-white" style="background-color: gold">
+    <div class="card-body">Player A</div>
+  </div>
+  <div class="card  text-white" style="background-color: silver" >
+    <div class="card-body">Player B</div>
+  </div>
+  <div class="card  text-white" style="background-color:brown">
+    <div class="card-body">Player C</div>
+  </div>
+  <div class="card  text-black" style="background-color:rgb(208, 255, 190)">
+    <div class="card-body">Player D</div>
+  </div>
+  
+  
 
