--- a/frontend/envirevent/src/app/donator-leaderboard/donator-leaderboard.component.html
+++ b/frontend/envirevent/src/app/donator-leaderboard/donator-leaderboard.component.html
@@ -1,15 +1,15 @@
 
   <div class="card  text-white" style="background-color: gold">
-    <div class="card-body">Player A</div>
+    <div class="card-body ;text-align:center">Player A</div>
   </div>
   <div class="card  text-white" style="background-color: silver" >
-    <div class="card-body">Player B</div>
+    <div class="card-body ;text-align:center">Player B</div>
   </div>
   <div class="card  text-white" style="background-color:brown">
-    <div class="card-body">Player C</div>
+    <div class="card-body ;text-align:center">Player C</div>
   </div>
   <div class="card  text-black" style="background-color:rgb(208, 255, 190)">
-    <div class="card-body">Player D</div>
+    <div class="card-body ;text-align:center">Player D</div>
   </div>
   
   
