quest started to dance

--- a/frontend/envirevent/src/app/donator-quest/donator-quest.component.html
+++ b/frontend/envirevent/src/app/donator-quest/donator-quest.component.html
@@ -1,5 +1,7 @@
-<p>
-  donator-quest works!
-</p>
-
-
+<div class="card  text-black" style="background: linear-gradient(to top left, #00ffff 5%, #66ff33 99%);" >
+  <div class="card-body text-center eventFont">Event Name</div>
+  <span>    </span>
+  <div class="col-8 col-s-8">
+    <progress-bar [progress]="50" [color]="'#488aff'"></progress-bar>
+  </div>
+</div>
