--- a/frontend/envirevent/src/app/donator-transaction/donator-transaction.component.html
+++ b/frontend/envirevent/src/app/donator-transaction/donator-transaction.component.html
@@ -1,3 +1,74 @@
-<p>
-  donator-transaction works!
-</p>
+<div class="container"  style="margin: 100px">
+    <h1>PENDING</h1>
+  
+    <div class="dropdown">
+      <button class="btn btn-primary dropdown-toggle"  type="button" data-toggle="dropdown">TRANSACTION MANAGEMENT
+      <span class="caret"></span></button>
+      <ul class="dropdown-menu">
+        <li><a href="#"><div class="form-group col-10">
+        <span><input [(ngModel)]="tetraPack" type="number" class="col" id="tetraPack" name="tetraPack" placeholder="Tetra Pack">
+        <label for="points">Points:</label>
+              <input type="text" class="col" id="points">
+          <button type="submit" class="btn btn-primary" >Submit</button>
+        </span>
+          </div></a></li>
+        <li><a href="#"><div class="form-group col-10">
+            <span><input [(ngModel)]="cardboard" type="number" class="col" id="cardboard" name="cardboard" placeholder="Card Board">
+            <label for="points">Points:</label>
+              <input type="text" class="col" id="points">
+              <button type="submit" class="btn btn-primary" >Submit</button>
+            </span>
+             </div></a></li>
+        <li><a href="#"> <div class="form-group col-10">
+              <span><input [(ngModel)]="glassBottle" type="number" class="col" id="glassBottle" name="glassBottle" placeholder="Glass Bottle">
+              <label for="points">Points:</label>
+              <input type="text" class="col" id="points">
+                <button type="submit" class="btn btn-primary" >Submit</button>
+              </span>
+               </div></a></li>
+        <li><a href="#"><div class="form-group col-10">
+              <span><input [(ngModel)]="plasticBottle" type="number" class="col" id="plasticBottle" name="plasticBottle" placeholder="Platic Bottle">
+              <label for="points">Points:</label>
+              <input type="text" class="col" id="points">
+                <button type="submit" class="btn btn-primary" >Submit</button>
+              </span>
+                 </div></a></li>
+      </ul>
+    </div>
+    <br><br>
+      <h1>COMPLETED</h1>
+      <div class="dropdown">
+        <button class="btn btn-primary dropdown-toggle" type="button" data-toggle="dropdown">TRANSACTION MANAGEMENT
+        <span class="caret"></span></button>
+        <ul class="dropdown-menu">
+          <li><a href="#"><div class="form-group col-10">
+          <span><input [(ngModel)]="tetraPack" type="number" class="col" id="tetraPack" name="tetraPack" placeholder="Tetra Pack">
+          <label for="points">Points:</label>
+                <input type="text" class="col" id="points">
+            <button type="submit" class="btn btn-primary" >Submit</button>
+          </span>
+            </div></a></li>
+          <li><a href="#"><div class="form-group col-10">
+              <span><input [(ngModel)]="cardboard" type="number" class="col" id="cardboard" name="cardboard" placeholder="Card Board">
+              <label for="points">Points:</label>
+                <input type="text" class="col" id="points">
+                <button type="submit" class="btn btn-primary" >Submit</button>
+              </span>
+               </div></a></li>
+          <li><a href="#"> <div class="form-group col-10">
+                <span><input [(ngModel)]="glassBottle" type="number" class="col" id="glassBottle" name="glassBottle" placeholder="Glass Bottle">
+                <label for="points">Points:</label>
+                <input type="text" class="col" id="points">
+                  <button type="submit" class="btn btn-primary" >Submit</button>
+                </span>
+                 </div></a></li>
+          <li><a href="#"><div class="form-group col-10">
+                <span><input [(ngModel)]="plasticBottle" type="number" class="col" id="plasticBottle" name="plasticBottle" placeholder="Platic Bottle">
+                <label for="points">Points:</label>
+                <input type="text" class="col" id="points">
+                  <button type="submit" class="btn btn-primary" >Submit</button>
+                </span>
+                   </div></a></li>
+        </ul>
+      </div>
+  </div>
