--- a/frontend/envirevent/src/app/donator-leaderboard/donator-leaderboard.component.html
+++ b/frontend/envirevent/src/app/donator-leaderboard/donator-leaderboard.component.html
@@ -5,6 +5,17 @@
   <div class="col-4">  <button type="button" class="btn btn-block btn-lg" disabled>Weekly</button></div>
   <div class="col-4">  <button type="button" class="btn btn-block btn-lg" disabled>Daily</button></div>
 </div>
+<div class="card-body ;text-align:center" style="background-color: rgb(244, 247, 242)">
+    <div class="row">
+    <div class="card-body col-2">Serial Number</div>
+    <div class="card-body col-6">
+      Name
+    </div>
+
+    <div class="card-body col-4">Points</div>
+  </div>
+    
+  </div>
       <ng-container *ngFor="let item of leaderboard;let i =index">
           <div class="card-body ;text-align:center" style="background-color: rgb(244, 247, 242)">
               <div class="row">
