kartick take over

--- a/frontend/envirevent/src/app/collector-request/collector-request.component.html
+++ b/frontend/envirevent/src/app/collector-request/collector-request.component.html
@@ -6,7 +6,7 @@
         </div>
       <div class="form-group col-8">
         <span><input [(ngModel)]="tetraPack" type="number" class="form-control" id="tetraPack" name="tetraPack" placeholder="Tetra Pack">
-          <input type="checkbox" name="" value=""> <br>
+          <!-- <input type="checkbox" name="" value=""> <br> -->
          </span>  
         </div>
         <div class="form-group col-4">
@@ -14,7 +14,7 @@
            </div>
          <div class="form-group col-8">
          <span> <input [(ngModel)]="cardboard" type="number" class="form-control" id="cardboard" name="cardboard" placeholder="Card Board">
-          <input type="checkbox" name="" value=""> <br>
+          <!-- <input type="checkbox" name="" value=""> <br> -->
         </span>
            </div>
            <div class="form-group col-4">
@@ -22,7 +22,7 @@
              </div>
            <div class="form-group col-8">
             <span> <input [(ngModel)]="glassBottle" type="number" class="form-control" id="glassBottle" name="glassBottle" placeholder="Glass Bottle">
-              <input type="checkbox" name="" value=""> <br>
+              <!-- <input type="checkbox" name="" value=""> <br> -->
             </span>
              </div>
              <div class="form-group col-4">
@@ -30,7 +30,7 @@
                </div>
              <div class="form-group col-8">
                 <span><input [(ngModel)]="plasticBottle" type="number" class="form-control" id="plasticBottle" name="plasticBottle" placeholder="Platic Bottle">
-                  <input type="checkbox" name="" value=""> <br>
+                  <!-- <input type="checkbox" name="" value=""> <br> -->
                 </span>
 
                </div>
