--- a/frontend/envirevent/src/app/collector-wallet/collector-wallet.component.html
+++ b/frontend/envirevent/src/app/collector-wallet/collector-wallet.component.html
@@ -1,3 +1,41 @@
-<p>
-  collector-wallet works!
-</p>
+<div >
+    <div class="card bg-primary text-white card-body">
+        <div align="center">Eco Wallet</div>
+      </div>
+      
+      
+      
+      <div class="card bg-light text-dark">
+       
+        <div class="card-body">
+          <p>
+            Total Points : 60pts
+          </p>
+          <p>
+            Total Money : 60 rupees
+          </p>
+        </div>
+      </div>
+      
+      <div class="card bg-primary text-white card-body">
+        <div align="center">Previous Transaction</div>
+      </div>
+      
+      <div class="card bg-light text-dark card-body">
+          <div class="row" [ngStyle]="{'color':addition}" >
+            <div class="col-2 col-md-3"><span>+60</span></div>
+            <div class="col-3 col-md-6"></div>
+            <div class="col-7 col-md-3">By Abhisekh</div>
+          </div>
+      </div>
+      
+      <div class="card bg-light text-dark card-body">
+          <div class="row" [ngStyle]="{'color':addition}">
+              <div class="col-2 col-md-3"> <span>+360</span> </div>
+              <div class="col-3 col-md-6"></div>
+              <div class="col-7 col-md-3">By Chintan</div>
+            </div>
+      </div>
+      <br>
+      
+</div>
