--- a/frontend/envirevent/src/app/donator/donator.component.html
+++ b/frontend/envirevent/src/app/donator/donator.component.html
@@ -14,7 +14,7 @@
 
     </ul>
     <form class="form-inline my-2 my-lg-0">
-
+        <button  class="btn btn-outline-success my-2 my-sm-0 btn-lg" type="submit">LogOut</button>
     </form>
   </div>
 </nav>
