--- a/frontend/envirevent/src/app/collector-request/collector-request.component.html
+++ b/frontend/envirevent/src/app/collector-request/collector-request.component.html
@@ -5,7 +5,7 @@
          <h3>Tetra Pack</h3>
         </div>
       <div class="form-group col-10">
-        <span><input [(ngModel)]="tetraPack" type="number" class="form-control" id="tetraPack" name="tetraPack" placeholder="Tetra Pack">
+        <span><input  type="number" class="form-control" id="tetraPack" name="tetraPack" placeholder="Tetra Pack">
           <input type="checkbox" name="" value=""> <br>
          </span>  
         </div>
@@ -13,7 +13,7 @@
             <h3>CardBoard</h3>
            </div>
          <div class="form-group col-10">
-         <span> <input [(ngModel)]="cardboard" type="number" class="form-control" id="cardboard" name="cardboard" placeholder="Card Board">
+         <span> <input  type="number" class="form-control" id="cardboard" name="cardboard" placeholder="Card Board">
           <input type="checkbox" name="" value=""> <br>
         </span>
            </div>
@@ -21,7 +21,7 @@
               <h3>Glass Bottle </h3>
              </div>
            <div class="form-group col-10">
-            <span> <input [(ngModel)]="glassBottle" type="number" class="form-control" id="glassBottle" name="glassBottle" placeholder="Glass Bottle">
+            <span> <input  type="number" class="form-control" id="glassBottle" name="glassBottle" placeholder="Glass Bottle">
               <input type="checkbox" name="" value=""> <br>
             </span>
              </div>
@@ -29,7 +29,7 @@
                 <h3>Plastic Bottle</h3>
                </div>
              <div class="form-group col-10">
-                <span><input [(ngModel)]="plasticBottle" type="number" class="form-control" id="plasticBottle" name="plasticBottle" placeholder="Platic Bottle">
+                <span><input  type="number" class="form-control" id="plasticBottle" name="plasticBottle" placeholder="Platic Bottle">
                   <input type="checkbox" name="" value=""> <br>
                 </span>
 
