all routing of buttons

--- a/frontend/envirevent/src/app/collector-mainpage/collector-mainpage.component.html
+++ b/frontend/envirevent/src/app/collector-mainpage/collector-mainpage.component.html
@@ -11,15 +11,15 @@
       <br>
       <br>
       <br>
-      <div class="col-12 col-md-4"><button type="button" class="btn btn-outline-secondary  btn-block">RECYCLE</button></div>
+      <div class="col-12 col-md-4"><a href="collector/verify"><button type="button" class="btn btn-outline-secondary  btn-block">VERIFY</button></a></div>
       <br>
       <br>
       <br>
-      <div class="col-12 col-md-4"><button type="button" class=" btn-block btn btn-outline-secondary">QUEST</button></div>
+      <div class="col-12 col-md-4"><a href="collector/request"><button type="button" class=" btn-block btn btn-outline-secondary">REQUEST</button></a></div>
       <br>
       <br>
       <br>
-      <div class="col-12 col-md-4"><button type="button" class=" btn-block btn btn-outline-secondary">LEADERBOARD</button></div>
+      <div class="col-12 col-md-4"><a href="collector/wallet"><button type="button" class=" btn-block btn btn-outline-secondary">WALLET</button></a></div>
       
     </div>
   </div>
