--- a/frontend/envirevent/src/app/collector-request/collector-request.component.html
+++ b/frontend/envirevent/src/app/collector-request/collector-request.component.html
@@ -5,7 +5,7 @@
          <h5>Tetra Pack</h5>
         </div>
       <div class="form-group col-10">
-        <span><input [(ngModel)]="tetraPack" type="number" class="form-control" id="tetraPack" name="tetraPack" placeholder="Tetra Pack">
+        <span><input  type="number" class="form-control" id="tetraPack" name="tetraPack" placeholder="Tetra Pack">
           <input type="checkbox" name="" value=""> <br>
          </span>  
         </div>
@@ -13,7 +13,7 @@
             <h5>CardBoard</h5>
            </div>
          <div class="form-group col-10">
-         <span> <input [(ngModel)]="cardboard" type="number" class="form-control" id="cardboard" name="cardboard" placeholder="Card Board">
+         <span> <input  type="number" class="form-control" id="cardboard" name="cardboard" placeholder="Card Board">
           <input type="checkbox" name="" value=""> <br>
         </span>
            </div>
