--- a/frontend/envirevent/src/app/donator-mainpage/donator-mainpage.component.html
+++ b/frontend/envirevent/src/app/donator-mainpage/donator-mainpage.component.html
@@ -11,18 +11,18 @@
     <br>
     <br>
     <br>
-    <div class="col-6 col-md-4"><button type="button" class="btn btn-outline-secondary  btn-block">RECYCLE</button></div>
-    <div class="col-6 col-md-4"><button type="button" class=" btn-block btn btn-outline-secondary ">TRANSACT</button></div>
+    <div class="col-6 col-md-4"><a href="donor/donate"><button type="button" class="btn btn-outline-secondary  btn-block">  RECYCLE</button></a></div> 
+    <div class="col-6 col-md-4"><a href="donor/transact"><button type="button" class=" btn-block btn btn-outline-secondary ">TRANSACT</button></a></div>
     <br>
     <br>
     <br>
-    <div class="col-6 col-md-4"><button type="button" class=" btn-block btn btn-outline-secondary">QUEST</button></div>
-    <div class="col-6 col-md-4"><button type="button" class=" btn-block btn btn-outline-secondary">WALLET</button></div>
+    <div class="col-6 col-md-4"><a href="donor/quest"><button type="button" class=" btn-block btn btn-outline-secondary">QUEST</button></a></div>
+    <div class="col-6 col-md-4"><a href="donor/wallet"><button type="button" class=" btn-block btn btn-outline-secondary">WALLET</button></a></div>
     <br>
     <br>
     <br>
-    <div class="col-6 col-md-4"><button type="button" class=" btn-block btn btn-outline-secondary">LEADERBOARD</button></div>
-    <div class="col-6 col-md-4"><button type="button" class=" btn-block btn btn-outline-secondary">SHOPS NEARBY</button></div>
+    <div class="col-6 col-md-4"><a href="donor/leaderboard"><button type="button" class=" btn-block btn btn-outline-secondary">LEADERBOARD</button></a></div>
+    <div class="col-6 col-md-4"><a href="maps"><button type="button" class=" btn-block btn btn-outline-secondary">SHOPS NEARBY</button></a></div>
     
   </div>
 </div>
